--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "discord bot",
   "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joro-kun",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.3",
+    "express": "^4.17.1",
     "mathjs": "^9.4.4",
     "moment": "^2.29.1"
   }
