--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
   "author": "Joro-kun",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "discord-buttons": "^4.0.0",
     "discord.js": "^12.5.3",
+    "distube": "^2.8.18",
     "express": "^4.17.1",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.4.0",
+    "ffprobe": "^1.1.2",
     "mathjs": "^9.4.4",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "ms": "^2.1.3",
+    "quick.db": "^7.1.3",
+    "ytdl-core-discord": "^1.3.1",
+    "ytsearch": "^1.0.4"
   }
 }
